--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
     </div>
     <div class="footer">
-      &copy Smuggler Bay LTD 2020
+      &copy Smuggler Bay LTD 2020-2022
     </div>
   </body>
 </html>
